--- a/job-detail.html
+++ b/job-detail.html
@@ -102,9 +102,9 @@
                             <img class="flex-shrink-0 img-fluid border rounded" src="img/com-logo-2.jpg" alt="" style="width: 80px; height: 80px;">
                             <div class="text-start ps-4">
                                 <h3 class="mb-3">Marketing Manager</h3>
-                                <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>New York, USA</span>
+                                <span class="text-truncate me-3"><i class="fa fa-map-marker-alt text-primary me-2"></i>Banglore,INDIA</span>
                                 <span class="text-truncate me-3"><i class="far fa-clock text-primary me-2"></i>Full Time</span>
-                                <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>$123 - $456</span>
+                                <span class="text-truncate me-0"><i class="far fa-money-bill-alt text-primary me-2"></i>CTC 16lpa</span>
                             </div>
                         </div>
 
@@ -132,20 +132,24 @@
                         </div>
         
                         <div class="">
-                            <h4 class="mb-4">Apply For The Job</h4>
+                            <h4 class="mb-4">Hurry Up! Apply For The Job.</h4>
                             <form>
                                 <div class="row g-3">
                                     <div class="col-12 col-sm-6">
-                                        <input type="text" class="form-control" placeholder="Your Name">
+                                        <input type="text" class="form-control" placeholder="Your Full Name" required>
                                     </div>
                                     <div class="col-12 col-sm-6">
-                                        <input type="email" class="form-control" placeholder="Your Email">
+                                        <input type="email" class="form-control" placeholder="Your Email" required>
                                     </div>
                                     <div class="col-12 col-sm-6">
-                                        <input type="text" class="form-control" placeholder="Portfolio Website">
+                                        <input type="text" class="form-control" placeholder="Mobile Number" required>
                                     </div>
                                     <div class="col-12 col-sm-6">
-                                        <input type="file" class="form-control bg-white">
+                                        <input type="text" class="form-control" placeholder="Permanent Address with pincode" required>
+                                    </div>
+                                    <div class="col-12 col-sm-6">
+                                        <label for="file">Upload Your Resume:</label>
+                                        <input type="file" class="form-control bg-white" required>
                                     </div>
                                     <div class="col-12">
                                         <textarea class="form-control" rows="5" placeholder="Coverletter"></textarea>
