--- a/testimonial.html
+++ b/testimonial.html
@@ -45,7 +45,7 @@
         <!-- Navbar Start -->
         <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
             <a href="index.html" class="navbar-brand d-flex align-items-center text-center py-0 px-4 px-lg-5">
-                <h3> <img class="logo"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsd9wYkNnPXEk_NrUKhN-lkoWnVpEianPhHw&usqp=CAU">  Digital Recruiting  Platform</h3>
+                <h3> <img class="logo"src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTsd9wYkNnPXEk_NrUKhN-lkoWnVpEianPhHw&usqp=CAU">  Digital Recruitment  Platform</h3>
             </a>
             <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
